<resources>
    <string name="app_name">DigiKala Store</string>
    <string name="home_title_item">خانه</string>
    <string name="category_title_item">دسته بندی ها</string>
    <string name="cart_title_item">سبد خرید</string>
    <string name="best_products_header">بهترین محصولات</string>
    <string name="latest_products_header">جدیدترین محصولات</string>
    <string name="most_visited_products_header">پر بازدیدترین محصولات</string>
    <string name="featured_products_header">محصولات ویژه</string>
    <string name="specifications">مشخصات کلی</string>
    <string name="search_hint">جستجو در دیجی کالا</string>
    <string name="search_item_title">Search</string>
    <string name="available_in_stock">موجود در انبار دیجی کالا</string>
    <string name="not_available_in_stock">در انبار موجود نیست</string>
    <string name="in_stock">instock</string>
    <string name="search_result">نتایج جستجو </string>
    <string name="filter">فیلترها</string>
    <string name="related">مرتبط ترین</string>
    <string name="currency">تومان</string>
    <string name="see_all_product">مشاهده همه</string>
    <string name="desc_order_by_price">قیمت از زیاد به کم</string>
    <string name="asc_order_by_price">قیمت از کم به زیاد</string>
    <string name="order_by_sale">پرفروش ترین ها</string>
    <string name="order_by_date">جدیدترین ها</string>
    <string name="text_button">افزودن به سبد خرید</string>
    <string name="number">1</string>
    <string name="text_sale">در سبد شما</string>
    <string name="total_price">مجموع</string>
    <string name="ordering">مرتب سازی</string>
    <string name="user_comments">نظرات کاربران</string>
    <string name="no_comment">نظری برای این محصول ثبت نشده است</string>
    <string name="submit_comment">ثبت نظر</string>
    <string name="see_all_comments">مشاهده همه نظرات</string>
    <string name="first_name_hint">نام</string>
    <string name="email_hint">آدرس ایمیل</string>
    <string name="content_review_hint">متن نظر</string>
    <string name="last_name_hint">نام خانوادگی</string>
    <string name="username_hint">نام کاربری</string>
    <string name="address_hint">آدرس</string>
    <string name="phone_hint">شماره تلفن همراه</string>
    <string name="my_location">مکان من</string>
    <string name="continue_the_buying_process">ادامه فرایند خرید</string>
    <string name="login_to_digikala">ورود به دیجی کالا</string>
    <string name="register">ثبت نام</string>
    <string name="confirmation">تایید</string>
    <string name="exist_user">کاربری با این ایمیل وجود دارد</string>
    <string name="register_successful">ثبت نام با موفقیت انجام شد</string>
    <string name="fill_required_fields">موارد خواسته شده را پر کنید</string>
    <string name="login">ورود</string>
    <string name="wrong_username_or_email">ایمیل یا نام کاربری شما اشتباه می باشد</string>
    <string name="empty_address_list">در حال حاضر آدرسی برای شما ثبت نشده است</string>
    <string name="add_new_address">اضافه کردن آدرس جدید</string>
    <string name="your_address">آدرس های شما</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>